Trying to add a dark mode toggle

--- a/current_projects/index.qmd
+++ b/current_projects/index.qmd
@@ -5,7 +5,6 @@ toc-title: Current projects
 toc-location: left
 ---
 
-```{=html}
 <style>
   .document-title::after {
     content: "";
@@ -81,42 +80,33 @@ toc-location: left
     display: block; /* Show content when section is open */
   }
   
-  /* Style for horizontal lines */
-  .section-divider {
-    border: none;
-    border-top: 2px solid #ccc; /* Thickness and color of the line */
-    margin: 20px 0; /* Spacing above and below the line */
-  }
+  <!-- /* Style for horizontal lines */ -->
+  <!-- .section-divider { -->
+  <!--   border: none; -->
+  <!--   border-top: 2px solid #ccc; /* Thickness and color of the line */ -->
+  <!--   margin: 20px 0; /* Spacing above and below the line */ -->
+  <!-- } -->
 </style>
-```
+
+
 ### PhD chapters (University of the Sunshine Coast, QLD, Australia)
 
 <details>
-
 <summary>Future ocean climate and implications for Australia's marine protected areas</summary>
-
 ::: collapsible-content
-```         
 <img src="climref_overlap.png" class="image-left" alt="Future ocean climate and implications for Australia's marine protected areas"/>
 *Put abstract here*
-```
 :::
-
 </details>
 
-<hr class="section-divider"/>
+<!-- <hr class="section-divider"/> -->
+***
 
 ### Other
-
 <details>
-
 <summary>Blahblahblah</summary>
-
 ::: collapsible-content
-```         
 <img src="SSP245_tos.gif" alt="Example GIF of daily sea surface temperature for SSP2-4.5 emissions scenario for 1993" style="max-width: 60%; height: auto; margin-left: 35px;"/>
 *Put whatever here*
-```
 :::
-
 </details>
