--- a/current_projects/index.qmd
+++ b/current_projects/index.qmd
@@ -92,21 +92,12 @@ toc-location: left
 ### PhD chapters (University of the Sunshine Coast, QLD, Australia)
 
 <details>
-<summary>Future ocean climate and implications for Australia's marine protected areas</summary>
+<summary>Future ocean climate and implications for Australia's marine protected areas (in press)</summary>
 ::: collapsible-content
 <img src="climref_overlap.png" class="image-left" alt="Future ocean climate and implications for Australia's marine protected areas"/>
-*Put abstract here*
+Climate change is a pervasive global threat to people and nature. In the oceans, there is a suite of climate impacts, including chronic stressors such as warming, acidification, deoxygenation, and acute stressors such as marine heatwaves. The primary approach for conserving marine biodiversity is the use of protected areas, which can manage local stressors such as fishing, shipping and mining, but offer little protection from climate change if they are not designed around areas of least change. Here we use climate projections from a suite of CMIP6 Earth System Models to assess the exposure to climate change of waters within the Australian EEZ, and implications for the protected area network. We find that marine ecosystems will experience conditions outside their historical range for all scenarios that exceed 2°C warming this century, resulting in a disappearance of climate refugia – areas of slowest change – by 2040. The loss of climate refugia is likely to lead to poor biodiversity outcomes, including movement of biodiversity outside protected area boundaries. However, we find some capacity for the re-emergence of refugia in the latter half of the century under stronger mitigation scenarios. Moreover, we find that the placement of Australian marine protected areas (MPAs) in terms of climate change is no better than random. The MPA network has a similar exposure to warming, acidification, deoxygenation and marine heatwaves than areas outside, implying limited consideration of climate change in protected area design. Our findings on the changes in chronic stressors, extreme events and climate refugia could be used to expand or redesign the current network to increase climate resilience to climate change.
 :::
 </details>
 
 <!-- <hr class="section-divider"/> -->
 ***
-
-### Other
-<details>
-<summary>Blahblahblah</summary>
-::: collapsible-content
-<img src="SSP245_tos.gif" alt="Example GIF of daily sea surface temperature for SSP2-4.5 emissions scenario for 1993" style="max-width: 60%; height: auto; margin-left: 35px;"/>
-*Put whatever here*
-:::
-</details>
